@startuml PackageDiagramOptimized
left to right direction

' --- PRESENTATION ---
package "Presentation" {
  class PropertyAPI
  class RoomAPI
  class MediaAPI
  class SearchAPI
  class AuthAPI
}

' --- SERVICE ---
package "Service" {
  class PropertyService
  class RoomService
  class MediaService
  class AuthService
  class SearchService
}

' --- DOMAIN ---
package "Domain" {

  package "Entities" {
    class User
    class Property
    class Room
    class Media
    interface IAmenity
    class RoomAmenity
    class PropertyAmenity
  }

  package "Repositories" {
    interface IPropertyRepository
    interface IRoomRepository
    interface IMediaRepository
    interface IUserRepository
    interface ISearchRepository
    abstract AmenityRepository
  }


  package "Adapters" {
    interface IMediaStorage
    interface IAuthProvider
  }



}

package "RepositoryInfra" {

  package "Repositories" {
    class PropertyRepositoryImpl
    class RoomRepositoryImpl
    class MediaRepositoryImpl
    class UserRepositoryImpl
    class SearchRepositoryImpl
    class PropertyAmenityRepository
    class RoomAmenityRepository
  }

  package "Adapters" {
    class S3MediaStorage
    class AWSCognitoAuthProvider

  }

  package "Factories" {
    abstract AmenityFactory
    class PropertyAmenityFactory
    class RoomAmenityFactory
  }


}

' "Presentation" ..> "Service"
' "Service" ..> "RepositoryInfra"
' "Service" ..> "Domain"
' "RepositoryInfra" ..> "Domain"

'iamenity
IAmenity <|.. RoomAmenity
IAmenity <|.. PropertyAmenity

AmenityFactory <|.. PropertyAmenityFactory
AmenityFactory <|.. RoomAmenityFactory



@enduml
